# PanelPrompt

./: README.md  main.py  pyproject.toml  requirements.txt
static/: account.html  app.js  billing.html  dashboard.html  history.html  index.html  query.html  styles.css
