[project]
name = "panelprompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.1.1",
    "email-validator>=2.3.0",
    "fastapi==0.118.0",
    "httpx>=0.27.2",
    "langchain==1.1.0",
    "langgraph==1.0.4",
    "langgraph-sdk==0.2.10",
    "pandas>=2.3.3",
    "pydantic>=2.8.2",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "supabase==2.4.6",
    "uvicorn==0.23.2",
]
